--- a/app/src/main/res/layout/imageview_cards.xml
+++ b/app/src/main/res/layout/imageview_cards.xml
@@ -2,6 +2,6 @@
 <ImageView  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
     />
