--- a/app/src/main/res/layout/fragment_character_card.xml
+++ b/app/src/main/res/layout/fragment_character_card.xml
@@ -7,7 +7,6 @@
 
     <ImageView
         android:id="@+id/center_character_image"
-        android:src="@drawable/image082"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
@@ -22,15 +21,14 @@
         android:layout_height="wrap_content"
         app:layout_constraintGuide_percent="0.5"
         android:orientation="horizontal"/>
+
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_abilities"
         android:background="@color/cardview_light_background"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
+        android:padding="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@id/guideline"
         app:layout_constraintStart_toStartOf="parent"
