--- a/app/src/main/res/layout/card_country.xml
+++ b/app/src/main/res/layout/card_country.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_country_banner"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:layout_margin="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -11,29 +12,46 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/tv_country_name"
+            android:text="Shu"
+            android:textColor="@color/colorAccent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="2dp"
+            android:textSize="30sp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            app:layout_constraintStart_toStartOf="@id/iv_country_banner"
+            app:layout_constraintBottom_toBottomOf="@id/iv_country_banner"
+            app:layout_constraintTop_toTopOf="@id/iv_country_banner" />
+
         <ImageView
             android:id="@+id/iv_country_banner"
-            android:src="@drawable/image001"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="70dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/ic_shurectangle"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:src="@drawable/shu_liu_bei"
+            app:layout_constraintStart_toEndOf="@id/tv_country_name"
+            app:layout_constraintTop_toTopOf="@id/iv_country_banner"
+            app:layout_constraintBottom_toBottomOf="@id/iv_country_banner"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_characters_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             android:background="@color/grayBackground"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_country_banner">
-
-
         </android.support.v7.widget.RecyclerView>
 
-
     </android.support.constraint.ConstraintLayout>
-
 </android.support.v7.widget.CardView>
