--- a/app/src/main/res/layout/imageview_cards.xml
+++ b/app/src/main/res/layout/imageview_cards.xml
@@ -1,7 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="200dp"
-    android:layout_width="wrap_content"
-    android:layout_marginTop="5dp"
-    android:layout_marginHorizontal="5dp"
-    />
+<layout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <import type="android.view.View"/>
+        <variable
+            name="character"
+            type="com.example.oscar.sanguoshaenglish.entities.Character"/>
+    </data>
+
+    <ImageView
+        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="5dp"
+        />
+</layout>
+
+
+
