--- a/app/src/main/res/layout/imageview_cards.xml
+++ b/app/src/main/res/layout/imageview_cards.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginHorizontal="5dp"
+        android:transitionName="test"
         />
 </layout>
 
