--- a/app/src/main/res/layout/fragment_character_card.xml
+++ b/app/src/main/res/layout/fragment_character_card.xml
@@ -11,7 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:transitionName="test"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,6 +30,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:padding="3dp"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@id/guideline"
         app:layout_constraintStart_toStartOf="parent"
