--- a/app/src/main/res/layout/card_country.xml
+++ b/app/src/main/res/layout/card_country.xml
@@ -14,7 +14,7 @@
 
         <TextView
             android:id="@+id/tv_country_name"
-            android:textColor="@color/colorAccent"
+            android:textColor="@android:color/holo_blue_light"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="2dp"
