--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -24,7 +24,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_char_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:nestedScrollingEnabled="false"
             app:layout_constraintTop_toBottomOf="@id/iv_cover"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
